--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "queuep",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "Redis backed queue optimized for congestion control and just that",
   "main": "dist/QueueP.js",
   "author": "pubudud",
@@ -25,13 +25,14 @@
     "redis": "^2.7.1"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.0",
     "babel-preset-node6": "^11.0.0",
+    "eslint": "^3.16.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
-    "pre-commit": "^1.2.2",
-    "pre-push": "^0.1.1",
     "lint-staged": "^3.3.1",
-    "eslint": "^3.16.1"
+    "pre-commit": "^1.2.2",
+    "pre-push": "^0.1.1"
   },
   "pre-push": [
     "eslint",
