--- a/package.json
+++ b/package.json
@@ -1,6 +1,16 @@
 {
   "name": "queuep",
-  "version": "0.0.0",
+  "version": "0.0.5",
+  "description": "Redis backed queue optimized for congestion control and just that",
+  "main": "dist/QueueP.js",
+  "author": "pubudud",
+  "license": "MIT",
+  "url": "https://github.com/pupudu/queuep/issues",
+  "email": "pubudu.dodan@gmail.com",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pupudu/queuep.git"
+  },
   "scripts": {
     "start": "gulp babel && node dist/index.js",
     "pre-push-dependencies": "npm install",
@@ -15,12 +25,14 @@
     "redis": "^2.7.1"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-node6": "^11.0.0",
+    "eslint": "^3.16.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
-    "pre-commit": "^1.2.2",
-    "pre-push": "^0.1.1",
     "lint-staged": "^3.3.1",
-    "eslint": "^3.16.1"
+    "pre-commit": "^1.2.2",
+    "pre-push": "^0.1.1"
   },
   "pre-push": [
     "eslint",
