--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "queuep",
-  "version": "1.1.2",
+  "version": "1.3.4",
   "description": "High Performance Congestion Control Map-Queue hybrid for NodeJs applications",
   "main": "dist/queuep.js",
   "author": "pubudud",
@@ -38,18 +38,20 @@
     "git-unstaged-changes": "git diff --quiet",
     "git-branch": "bash git-hooks/branch.sh",
     "lint-staged": "lint-staged",
+    "build": "gulp babel",
     "test": "NODE_ENV='test' STRATEGY='unit' nyc --reporter=html --reporter=text mocha 'src/**/*.test.js' --compilers js:babel-core/register --reporter spec  --timeout 10000 --recursive",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "dependencies": {},
   "devDependencies": {
+    "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-node6": "^11.0.0",
     "chai": "^4.1.1",
     "coveralls": "^2.13.1",
     "eslint": "^4.5.0",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
+    "gulp-babel": "^7.0.0",
     "lint-staged": "^4.0.4",
     "mocha": "^3.5.0",
     "nyc": "^11.1.0",
