--- a/package.json
+++ b/package.json
@@ -45,8 +45,7 @@
   "dependencies": {},
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-node6": "^11.0.0",
+    "babel-preset-env": "^1.6.1",
     "chai": "^4.1.1",
     "coveralls": "^2.13.1",
     "eslint": "^4.5.0",
