--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "git-branch": "bash git-hooks/branch.sh",
     "lint-staged": "lint-staged",
     "build": "gulp babel",
-    "test": "NODE_ENV='test' STRATEGY='unit' nyc --reporter=html --reporter=text mocha 'src/**/*.test.js' --compilers js:babel-core/register --reporter spec  --timeout 10000 --recursive",
+    "test": "NODE_ENV='test' STRATEGY='unit' nyc mocha 'src/**/*.test.js' ",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "dependencies": {},
@@ -58,7 +58,7 @@
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
     "lint-staged": "^4.0.4",
-    "mocha": "^3.5.0",
+    "mocha": "^5.0.1",
     "nyc": "^11.1.0",
     "pre-commit": "^1.2.2",
     "pre-push": "^0.1.1"
